--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
     #
     #labels:
     #  net.unraid.docker.webui: "http://[IP]:3750"
+    #  net.unraid.docker.icon: "https://github.com/thenunner/orphanage/blob/main/orphanage.png"
 
     environment:
       - TZ=America/Chicago
